--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/AirLine?useSSL=false
+spring.datasource.url = jdbc:postgresql://192.168.43.201:5432/AirLine?useSSL=false
 spring.datasource.username = postgres
 spring.datasource.password = 1234
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
