--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://192.168.43.131:5432/AirLine?useSSL=false
+spring.datasource.url = jdbc:postgresql://192.168.43.131:5432/FlightDB?useSSL=false
 spring.datasource.username = postgres
 spring.datasource.password = 1234
 
